2004-11-15  Philippe Gerum  <rpm@xenomai.org>

	* configure.in, nucleus/Kconfig: Make the maximum number of pipes
	configurable.

2004-11-14  Philippe Gerum  <rpm@xenomai.org>

	* nucleus, include/nucleus: Provide support for non-threaded Adeos
	domains (i.e. single-stack Adeos model).

	* fusion: Make the whole user-space support optional.

	* nucleus/pipe.c: Make it optional.

	* skins/rtai/registry.c, skins/rtai/event.c, skins/rtai/heap.c,
	skins/rtai/sem.c, skins/rtai/task.c: Add feature intro.

2004-11-13  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.3

2004-11-13  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c7.

	* nucleus/shadow.c (gatekeeper_thread): Lower spl when processing
	requests.

2004-11-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/system.h (xnarch_restore_fpu): Restore
	the ts bit when switching to a user-space thread with
	uninitialized FPU.

	* testsuite/cruncher/cruncher.c (sampler_thread): Really calibrate
	the cruncher for a 10 ms computation.

2004-11-07  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in (RTAI_KBUILD_CMD): Do return the same status as
	Kbuild make.

	* arch/i386/hal/hal.c (__rthal_init): Use CLOCK_TICK_RATE as CPU
	frequency when the kernel is configured without CONFIG_X86_TSC.

2004-11-07  Philippe Gerum  <rpm@xenomai.org>

	* GNUMakefile.am (device): Create /dev/rtheap.

	* skins/rtai/task.c: Add asynchronous notification support.

	* skins/rtai: Add shared heap (standalone) support.

2004-11-06  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/queue.c (rt_queue_send): Pass message's payload size.

	* skins/rtai/syscall.c: Check for writability of the return buffer
	for all inquiry services.
	
	* skins/rtai/syscall.c (__rt_queue_free, __rt_queue_send): General
	fix.

	* skins/rtai/queue.c, skins/rtai/syscalls.c,
	skins/rtai/lib/queue.c: Fix various issues for user-space use.